force-app/main/default/objects/FieloPLT__EmailAlert__c/FieloPLT__EmailAlert__c.object-meta.xml
<CustomObject>
    <description>The email that&apos;s sent out automatically when the Action or Event associated with a Transactional Email is triggered.</description>
    <label>Email Alert</label>
    <nameField>
        <displayFormat>EA-{0000000}</displayFormat>
        <label>Email Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>