force-app/main/default/objects/FieloPLT__EmailAlert__c/fields/FieloPLT__Action__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Action that triggered an Email Alert. Actions can be configured in the Libraries tab.</description>
    <inlineHelpText>This is the Action that triggered the Email Alert. Actions can be configured in the Libraries tab.</inlineHelpText>
    <label>Action</label>
    <referenceTo>FieloPLT__Action__c</referenceTo>
    <relationshipLabel>Email Alerts</relationshipLabel>
    <relationshipName>EmailAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>