force-app/main/default/objects/FieloPLT__EmailAlert__c/fields/FieloPLT__EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__EmailTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Fielo template containing the content for the Transactional Email associated with an Email Alert. Fielo Email Templates are configurable from a Program, Promotion or Challenge record.</description>
    <inlineHelpText>This is the Fielo template containing the content for the Transactional Email associated with this Email Alert. Fielo Email Templates are configurable from a Program, Promotion or Challenge record.</inlineHelpText>
    <label>Email Template</label>
    <referenceTo>FieloPLT__EmailTemplate__c</referenceTo>
    <relationshipLabel>Email Alerts</relationshipLabel>
    <relationshipName>EmailAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>