force-app/main/default/objects/FieloPLT__EmailAlert__c/fields/FieloPLT__Event__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Event associated with an Email Alert.</description>
    <inlineHelpText>This is the Event associated with the Email Alert.</inlineHelpText>
    <label>Event</label>
    <referenceTo>FieloPLT__Event__c</referenceTo>
    <relationshipLabel>Email Alerts</relationshipLabel>
    <relationshipName>Email_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>