force-app/main/default/objects/FieloPLT__EmailAlert__c/fields/FieloPLT__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Member who generated the Email Alert via an Action or Event.</description>
    <inlineHelpText>This is the Member who generated the Email Alert via an Action or Event.</inlineHelpText>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Email Alerts</relationshipLabel>
    <relationshipName>EmailAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>