force-app/main/default/objects/FieloPLT__EmailAlert__c/fields/FieloPLT__Point__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point</label>
    <referenceTo>FieloPLT__Point__c</referenceTo>
    <relationshipLabel>Email Alerts</relationshipLabel>
    <relationshipName>Email_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>