force-app/main/default/objects/FieloPLT__EmailAlert__c/fields/FieloPLT__Redemption__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Redemption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Redemption that triggered an Email Alert.</description>
    <inlineHelpText>This is the Redemption that triggered the Email Alert.</inlineHelpText>
    <label>Redemption</label>
    <referenceTo>FieloPLT__Redemption__c</referenceTo>
    <relationshipLabel>Email Alerts</relationshipLabel>
    <relationshipName>Email_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>