force-app/main/default/objects/FieloPLT__EmailAlert__c/fields/FieloPLT__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Status__c</fullName>
    <description>The status of a triggered Email Alert. This can be Processing, Pending or Sent.</description>
    <inlineHelpText>This is the status of the triggered Email Alert. It can be Processing, Pending or Sent.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
                <isActive>false</isActive>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>