force-app/main/default/objects/FieloPLT__EmailAlert__c/fields/FieloPLT__ToAddress__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ToAddress__c</fullName>
    <description>The E-mail address of the Member to whom the Transactional Email associated with an Email Alert will be sent.</description>
    <inlineHelpText>This is the E-mail address of the Member to whom the Transactional Email associated with this Email Alert was sent.</inlineHelpText>
    <label>To Address</label>
    <type>Email</type>
</CustomField>